<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_WearPartData_RD" Id="{832bedd2-3567-43ec-8401-cbcf14e028b5}">
    <Declaration><![CDATA[TYPE UDT_WearPartData_RD :
STRUCT
  actUsage : DINT; // 当前使用量
  maxUsage : DInt; // 最大使用量
  tipRate : Real; // 提示比例
  recordsTime : ARRAY[0..9] OF TIMESTRUCT; // 记录时间
  recordsUsage : Array[0..9] of DInt; // 记录用量

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>